Users and Roles with Established Login

--- a/templates/home/index.html
+++ b/templates/home/index.html
@@ -12,7 +12,7 @@
   <h2>Bienvenidos: {{ user }}</h2>
 
   <ul>
-    <li><a href="{% url 'user_app:logout-register' %}">Cerrar Sesion</a></li>
+    <li><a href="{% url 'user_app:logout-user' %}">Cerrar Sesion</a></li>
     <li><a href="{% url 'user_app:user-update' %}">Actualizar Datos</a></li>
   </ul>
 </body>
