--- a/templates/user/verify.html
+++ b/templates/user/verify.html
@@ -1,19 +1,29 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Verificacion de Correo</title>
-</head>
-<body>
+{% extends '../base.html' %}
+{% load static %}
 
-  <h1>Verificacion de Correo</h1>
-  <h3>Ingrese el Codigo de Verificacion</h3>
 
-  <form action="" method="post">{% csrf_token %}
-    {{ form.as_p}}
-    <button type="submit">Confirmar</button>
-  </form>
 
-</body>
-</html>
+{% block title %}
+  Login Usuario
+{% endblock title %}
+
+
+{% block content %}
+
+{% include '../includes/header.html' %}
+
+
+
+  <div class="container">
+    <h1 class="display-4">Verificacion de Correo</h1>
+    <h3>Ingrese el Codigo de Verificacion</h3>
+    <form action="" method="post">{% csrf_token %}
+      {{ form.as_p}}
+      <button type="submit">Confirmar</button>
+    </form>
+
+  </div>
+
+
+
+  {% endblock content %}
