--- a/templates/user/update.html
+++ b/templates/user/update.html
@@ -1,17 +1,34 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Update</title>
-</head>
-<body>
+{% extends '../base.html' %}
+{% load static %}
 
-  <h1>Cambiar Password {{ user.get_fullName }}</h1>
-  <form action="" method="post">{% csrf_token %}
-    {{ form.as_p }}
-    <button type="submit">Actualizar</button>
-  </form>
 
-</body>
-</html>
+
+{% block title %}
+  Password
+{% endblock title %}
+
+
+
+{% block content %}
+
+{% include './includes/headerLogin.html' %}
+
+
+  <div class="container">
+    <h1 class="display-4">Password {{ user.username }}</h1>
+    <center>
+    <hr>
+      <div class="container">
+        <form action="" method="post">{% csrf_token %}
+          {{ form.as_p }}
+          <button class="btn btn-light btn-lg btn-block" type="submit">Actualizar</button>
+  =      </form>
+      </div>
+    </center>
+  </div>
+
+
+
+
+{% endblock content %}
+
