--- a/templates/user/updateUser.html
+++ b/templates/user/updateUser.html
@@ -3,15 +3,16 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Registar Usuario</title>
+  <title>Update User</title>
 </head>
 <body>
 
-  <h1>User Registre</h1>
+  <h1>Update User {{ user.username }}</h1>
+
 
   <form action="" method="post"> {% csrf_token %}
-   {{ form.as_p }}
-   <button type="submit">Register</button>
+    {{ form.as_p }}
+    <button type="submit">Actualizar</button>
   </form>
 
 </body>
